Add HyperNeRF results

--- a/index.html
+++ b/index.html
@@ -290,7 +290,6 @@ window.addEventListener('pageshow', playAllPageVideos);
 </div>
 </section>
 
-<br> 
 <h2 class="subtitle has-text-centered">
 </h2>
 
@@ -309,21 +308,20 @@ window.addEventListener('pageshow', playAllPageVideos);
         </div>
     </div>
 
-    <br><br><br>
-
 
 <section class="section" style="padding-top: 1.5rem; padding-bottom: 1rem;">
   <div class="container is-max-desktop">
     <!-- Video -->
     <div class="columns is-centered has-text-centered" style="width: 100%; margin: 70px 0 0;">
         <div class="column" style="width: 100%; padding: 0;">
-            <h2 class="title is-3"> 4D Rendering Results </h2> 
+            <h2 class="title is-3"> 4D Rendering Results</h2>
+            <h4 class="title is-4"> on DyNeRF and Hypernerf dataset</h4>
             
             <!-- Single large video instead of carousel -->
             <section class="hero is-light is-small">
               <div class="hero-body">
                 <div class="container">
-                  <figure style="max-width: 300px; margin: 0 auto;">
+                  <figure style="max-width: 1000px; margin: 0 auto;">
                     <video id="result-video" controls autoplay loop muted playsinline preload="metadata" style="width: 100%; height: auto; border-radius: 10px;">
                       <source src="./Videos_for_project_page/Hypernerf.mp4" type="video/mp4">
                       Your browser does not support the video tag.
