Add HyperNeRF results

--- a/index.html
+++ b/index.html
@@ -309,6 +309,9 @@ window.addEventListener('pageshow', playAllPageVideos);
     </div>
 
 
+    </div>
+  </div>
+</section>
 <section class="section" style="padding-top: 1.5rem; padding-bottom: 1rem;">
   <div class="container is-max-desktop">
     <!-- Video -->
@@ -322,7 +325,7 @@ window.addEventListener('pageshow', playAllPageVideos);
               <div class="hero-body">
                 <div class="container">
                   <figure style="max-width: 1000px; margin: 0 auto;">
-                    <video id="result-video" controls autoplay loop muted playsinline preload="metadata" style="width: 100%; height: auto; border-radius: 10px;">
+                    <video id="result-video-1" controls autoplay loop muted playsinline preload="metadata" style="width: 100%; height: auto; border-radius: 10px;">
                       <source src="./Videos_for_project_page/Hypernerf.mp4" type="video/mp4">
                       Your browser does not support the video tag.
                     </video>
@@ -336,7 +339,7 @@ window.addEventListener('pageshow', playAllPageVideos);
               <div class="hero-body">
                 <div class="container">
                   <figure style="max-width: 1280px; margin: 0 auto;">
-                    <video id="result-video" controls autoplay loop muted playsinline preload="metadata" style="width: 100%; height: auto; border-radius: 10px;">
+                    <video id="result-video-2" controls autoplay loop muted playsinline preload="metadata" style="width: 100%; height: auto; border-radius: 10px;">
                       <source src="./Videos_for_project_page/Dynamic-eDiTor_renderings_720.mp4" type="video/mp4">
                       Your browser does not support the video tag.
                     </video>
@@ -347,6 +350,10 @@ window.addEventListener('pageshow', playAllPageVideos);
 
      
 
+        </div>
+    </div>
+  </div>
+</section>
 <section class="hero teaser" style="padding-top: 0.5rem; margin-top: 0;">
   <div class="container is-max-desktop">
     <div class="hero-body" style="padding-top: 0.5rem; padding-bottom: 0.5rem;">
@@ -379,6 +386,8 @@ window.addEventListener('pageshow', playAllPageVideos);
 
 
 
+  </div>
+</section>
 <section class="section" id="citation">
   <div class="container is-max-desktop">
     <div class="columns is-centered has-text-centered" style="width: 100%; margin: 50px 0 0;">
