--- a/index.html
+++ b/index.html
@@ -62,6 +62,7 @@ layout: null
             <h1 class="title is-1 publication-title">Dynamic-eDiTor: Training-Free Text-Driven 4D Scene Editing with Multimodal Diffusion Transformer
             </h1>
           </div>
+
           <div class="is-size-5 publication-authors">
 
             <!-- Authors with clickable links -->
@@ -94,6 +95,10 @@ layout: null
             <br>
             <span class="author-block"><sup>1</sup> Purdue University</span>
             <span class="author-block"><sup>2</sup> Korea University</span>
+          </div>
+
+          <div style="color: #f00a1a; font-weight: 800; font-size: 1.6rem; margin-top: 0.5rem;">
+            CVPR 2026
           </div>
 
           <div class="column has-text-centered">
